added job list page for job seeker

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,13 +1,85 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
+    <ion-navbar>
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+      <ion-title>Home</ion-title>
+    </ion-navbar>
+  </ion-header>
 
 <ion-content padding>
-  <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="itemClicked(item);">
-      {{ item.agt_key }} - {{ item.agt_name }} ({{ item.agt_rank }})
+    <!--<p>
+      <a href="http://localhost:8082/app1/api/home">Link to SSO</a>
+    </p>-->
+
+    <div [ngSwitch]="job_type" padding>
+      <ion-segment [(ngModel)]="jobs" (ionChange)="onSegmentChange()">
+        <ion-segment-button value="2" class="segment-button segment-activated">
+          Full Time
+        </ion-segment-button>
+        <ion-segment-button value="1">
+          Part Time
+        </ion-segment-button>
+        <ion-segment-button value="3">
+          Internship
+        </ion-segment-button>
+      </ion-segment>
+    </div>
+
+    <ion-grid>
+      <ion-row>
+        <ion-col *ngFor="let item of items" col-12 col-xl-2 col-lg-3 col-md-4>
+          <ion-card>
+            <ion-item>
+                <ion-thumbnail item-start>
+                    <img src="{{item.poster_photo}}" class="card-thumbnail">
+                </ion-thumbnail>
+              <h2 text-capitalize>{{ item.title }}</h2>
+              <h3 text-capitalize>{{ item.brand_name }}</h3>
+            </ion-item>
+            <ion-card-content>
+              $ {{ item.min_wage }} - $ {{ item.max_wage }} <br>
+              {{ item.location }}
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <!---->
+    
+    <!--<ion-card class="event-item"  *ngFor="let item of items">
+      <ion-card-content> 
+        <div [ngStyle]="{'background-image': 'url(' + item.poster_photo + ')'}" class="card-thumbnail"></div>
+        <button ion-item (click)="itemClicked(item);" text-wrap>
+            <h1>{{ item.title }}</h1>
+            <h3>{{ item.brand_name }}</h3>
+            {{ item.location }} <br>
+          </button>  
+      </ion-card-content> 
+    </ion-card>-->
+  
+  <!--<ion-card *ngFor="let item of items">
+    <ion-card-content> 
+      <button ion-item (click)="itemClicked(item);" text-wrap>
+          <ion-thumbnail item-start>
+              <img src="{{item.poster_photo}}" class="card-thumbnail">
+          </ion-thumbnail>
+          <h1>{{ item.title }}</h1>
+          <h3>{{ item.brand_name }}</h3>
+          {{ item.location }} <br>
+      </button>  
+    </ion-card-content> 
+  </ion-card>-->
+
+  <!--<ion-list *ngFor="let item of items">
+    <button ion-item (click)="itemClicked(item);" text-wrap>
+        <ion-thumbnail item-start>
+            <img src="{{item.poster_photo}}" class="card-thumbnail">
+         </ion-thumbnail>
+         <h1>{{ item.title }}</h1>
+         <h3>{{ item.brand_name }}</h3>
+         {{ item.location }} <br>
     </button>  
-  </ion-list>
+  </ion-list>-->
 </ion-content>
