--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,10 +1,11 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Contact
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+    <ion-navbar>
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+      <ion-title>Contact</ion-title>
+    </ion-navbar>
+  </ion-header>
 
 <ion-content>
   <ion-list>
