--- a/src/pages/policy_detail/policy_detail.html
+++ b/src/pages/policy_detail/policy_detail.html
@@ -5,51 +5,49 @@
   </ion-header>
   
   <ion-content padding>
-    <ion-list>
-        <ion-item>
+        <p>
             <ion-label>Unit Code</ion-label>
             <ion-label>{{unit_code}}</ion-label>
-        </ion-item>
-        <ion-item>
+        </p>
+        <p>
             <ion-label>Branch Code</ion-label>
             <ion-label>{{branch_code}}</ion-label>
-        </ion-item>
-        <ion-item>
+        </p>
+        <p text-wrap>
             <ion-label>Financial Planner Name</ion-label>
             <ion-label>{{financial_planner_name}}</ion-label>
-        </ion-item>
-        <ion-item>
+        </p>
+        <p>
             <ion-label>Policy Number</ion-label>
             <ion-label>{{policy_no}}</ion-label>
-        </ion-item>
-        <ion-item>
+        </p>
+        <p>
             <ion-label>Estimated NAC</ion-label>
             <ion-label>{{estimated_nac}}</ion-label>
-        </ion-item>
-        <ion-item>
+        </p>
+        <p>
             <ion-label>Estimated Comm</ion-label>
             <ion-label>{{estimated_comm}}</ion-label>
-        </ion-item>
-        <ion-item>
+        </p>
+        <p>
             <ion-label>FP Share</ion-label>
             <ion-label>{{fp_share}}</ion-label>
-        </ion-item>
-        <ion-item>
+        </p>
+        <p>
             <ion-label>Pending Days</ion-label>
             <ion-label>{{pending_days}}</ion-label>
-        </ion-item>
-        <ion-item>
+        </p>
+        <p text-wrap>
             <ion-label>Policy Owner</ion-label>
             <ion-label>{{policy_owner}}</ion-label>
-        </ion-item>
-        <ion-item>
+        </p>
+        <p>
             <ion-label>Last Update</ion-label>
             <ion-label>{{last_update}}</ion-label>
-        </ion-item>
-        <ion-item>
+        </p>
+        <p>
             <ion-label>Currency</ion-label>
             <ion-label>{{curr}}</ion-label>
-        </ion-item>
-    </ion-list>
+        </p>
   </ion-content>
   
